Refactor and cleanup core layer
- Introduce Clock interface in util for testability
- Add support for partial updation through /update endpoint
- Convert /update endpoint to PATCH from PUT
